Apply blue accent to cards in white theme. Fix arrow visibility in white theme.

--- a/src/stylesheet/style.css
+++ b/src/stylesheet/style.css
@@ -32,7 +32,7 @@ body{
 body.light {
     --color-primary: #26629A;
     --color-dark-1: #ffffff;
-    --color-dark-2: #e4e4e4;
+    --color-dark-2: rgb(239, 243, 250);
     --color-dark-3: #b4b4b4;
     --color-text: #333;
     color: var(--color-text);
@@ -417,7 +417,6 @@ body.light {
 
 
 /* Light Theme Adjustments */
-
 body.light .unit-btn{
     color: var(--color-text);
 }
@@ -426,9 +425,8 @@ body.light .unit-btn.active {
     color: var(--color-dark-1)
 }
 
-body.light .current-card-icon, body.light .search-icon{
+body.light .current-card-icon, body.light .search-icon, body.light .left-arrow, body.light .right-arrow{
     filter: invert(80%);
-    /* filter: invert(1); */
 }
 
 body.light .current-card-value, body.light .current-card-label, body.light .current-condition{
